<resources>
    <string name="app_name">Allergy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="warning_title">WARNING</string>
    <string name="warning_content">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
    </string>
    <string name="accept">Accept</string>
    <string name="information">Information</string>
    <string name="charts">Charts</string>
    <string name="alerts">Alerts</string>
    <string name="alert">Alerts</string>
    <string name="patient_name_label">Name</string>
    <string name="patient_dob_label">Date of Birth</string>
    <string name="patient_sex_label">Sex</string>
    <string name="patient_allergies_title">Allergies</string>
    <string name="drug">Drug</string>
    <string name="date_taken">Date Taken</string>
    <string name="chart">chart</string>
    <string name="done">Done</string>
    <string name="share">Share</string>
    <string name="print">Print</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="date_of_reaction">Date of Reaction</string>
    <string name="severity">Severity</string>
    <string name="reaction">Reaction</string>
    <string name="systems">Systems Involved</string>
    <string name="interventions">Interventions</string>
    <string name="alert_device">Alert Device</string>


    <string-array name="drugs">
        <item>Penicillin G</item>
        <item>Ampicillin</item>
        <item>Amoxicillin</item>
        <item>Amoxicillin-clavulanate</item>
        <item>Ampicillin-sulbactam</item>
        <item>Piperacillin-tazobactam</item>
        <item>Cefazolin</item>
        <item>Ceftriaxone</item>
        <item>Ceftazidime</item>
        <item>Cefepime</item>
        <item>Ceftaroline</item>
        <item>Doxycycline</item>
        <item>Minocycline</item>
        <item>Tigecycline</item>
        <item>Erythromycin</item>
        <item>Azithromycin</item>
        <item>Clarithromycin</item>
        <item>Vancomycin</item>
        <item>Daptomycin</item>
        <item>Linezolid</item>
        <item>Clindamycin</item>
        <item>Trimethoprim-sulfamethoxazole</item>
        <item>Metronidazole</item>
        <item>Gentamicin</item>
        <item>Tobramycin</item>
        <item>Amikacin</item>
        <item>Nitrofurantoin</item>
    </string-array>
    <string-array name="systems">
        <item>Skin</item>
        <item>Gastrointestinal</item>
        <item>Kidney</item>
        <item>Pulmonary</item>
        <item>Cardiac</item>
        <item>Blood</item>
        <item>Neurological</item>
        <item>Musculoskeletal</item>
    </string-array>
    <string-array name="reactions">
        <item>Jaundice</item>
        <item>Urticaria/Hives/Welts</item>
        <item>Rash</item>
        <item>Anaphylaxis</item>
        <item>Shortness of breath/Difficulty breathing</item>
        <item>Asthma attack</item>
        <item>Cough</item>
        <item>Coughing blood/Haemoptysis</item>
        <item>Nausea</item>
        <item>Vomiting</item>
        <item>Diarrhoea</item>
        <item>Taste change</item>
        <item>Blood in urine/ Haematuria</item>
        <item>Chest pain</item>
        <item>Heart attack</item>
        <item>Collapse</item>
        <item>Neutropenia</item>
        <item>Leukopenia</item>
        <item>Anaemia</item>
        <item>Bleeding</item>
        <item>Confusion</item>
        <item>Numbness</item>
        <item>Tingling</item>
        <item>Seizure</item>
        <item>Hearing loss</item>
        <item>Myalgia/ muscle pain</item>
        <item>Weakness</item>
    </string-array>
    <string-array name="severity">
        <item>Mild</item>
        <item>Severe</item>
    </string-array>
</resources>